--- a/src/mainMenu/styles.css
+++ b/src/mainMenu/styles.css
@@ -8,7 +8,7 @@ body {
             rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)
         ),
-        url(../assets/fondo.jpg);
+        url(../../assets/fondo.jpg);
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
