--- a/html/styles.css
+++ b/html/styles.css
@@ -1,8 +1,9 @@
 body {
-    text-align: center;
-    justify-content: center;
-    align-content: center;
+    /*text-align: center;*/
+    /*justify-content: center;*/
+    /*align-content: center;*/
 
+    /*Fondo*/
     background-image:
         linear-gradient(
             rgba(0, 0, 0, 0.5),
@@ -14,10 +15,13 @@ body {
     background-attachment: fixed;
 }
 
+/*----------------------------Titulo*/
 .mainTitle {
     font-size: 72;
     color:#00DDFF;
     font-family: fantasy;
+    margin-top: 15%;
+    text-align: center;
 }
 
 .mainTitle::before {
@@ -27,15 +31,90 @@ body {
     filter: blur(30px);
 }
 
+
+/*---------------------------------------------------------------------Seleccionar número de bolos*/
+
+/*-------------------------------------------------Quitar botones laterales*/
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+
+.content {
+    margin: auto;
+    width: 500px;
+}
+
+
+/*-------------------------------------------------*/
+.sel-pin-number {
+    text-align:right;
+    margin-bottom: 10px; /*Separar del botón de abajo*/
+}
+
+.sel-pin-number input {
+    background-color: #111;
+    color: white;
+    border: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+/*Botones + y -*/
+.sel-pin-number button {
+    width: 30px;
+    height: 30px;
+    border: 0px;
+    padding: 0px;
+    background-image: linear-gradient(
+        150deg,
+        #9500ff,
+        #09f,
+        #00DDFF
+    );
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    transition: .3;
+
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
+.sel-pin-number button span {
+    display: flex;
+    background-color: #111;
+    width: 90%;
+    height: 90%;
+    border-radius: 6px;
+    transition: .3s;
+
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+/*---------------------------------------------------------------------Botones*/
 .buttons a {
     text-decoration: none;
 }
 
-button {
-    width: 500px;
+.buttons button {
+    width: 100%;
     height: 40px;
     margin: auto;
-    margin-bottom: 10px; 
+    margin-bottom: 10px; /*Separar del botón de abajo*/
     border: 0;
     background-image: linear-gradient(
         150deg,
@@ -51,9 +130,9 @@ button {
 }
 
 
-button span {
+.buttons button span {
     background-color: #111;
-    width: 495px;
+    width: 99%;
     height: 35px;
     margin: auto;
     border-radius: 6px;
